[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/fonts/Hardpixel.OTF" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/main-menu2.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 72
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 6, 15, 33, 10 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 6, 27, 33, 10 )

[sub_resource type="DynamicFont" id=4]
size = 56
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 6, 15, 33, 10 )

[sub_resource type="DynamicFont" id=6]
size = 56
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 6, 15, 33, 10 )

[sub_resource type="DynamicFont" id=8]
size = 56
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 6, 15, 33, 10 )

[sub_resource type="DynamicFont" id=10]
size = 56
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 40
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -640.002
margin_right = 640.003
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
custom_fonts/font = SubResource( 1 )
text = "MAZE GAME"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -400.0
margin_top = -330.0
margin_right = 400.0
size_flags_horizontal = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 44.0
margin_right = 354.0
margin_bottom = 330.0
size_flags_horizontal = 6
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
margin_right = 310.0
margin_bottom = 90.0
rect_min_size = Vector2( 310, 90 )
mouse_default_cursor_shape = 2
texture_normal = SubResource( 2 )
texture_pressed = SubResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Play"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PLAY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shop" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 310.0
margin_bottom = 210.0
rect_min_size = Vector2( 310, 90 )
mouse_default_cursor_shape = 2
texture_normal = SubResource( 5 )
texture_pressed = SubResource( 3 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Shop"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SHOP"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 446.0
margin_right = 756.0
margin_bottom = 330.0
size_flags_horizontal = 6
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="TextureButton" parent="HBoxContainer/VBoxContainer2"]
margin_right = 310.0
margin_bottom = 90.0
rect_min_size = Vector2( 310, 90 )
mouse_default_cursor_shape = 2
texture_normal = SubResource( 7 )
texture_pressed = SubResource( 3 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/Options"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "OPTIONS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Quit" type="TextureButton" parent="HBoxContainer/VBoxContainer2"]
margin_top = 120.0
margin_right = 310.0
margin_bottom = 210.0
rect_min_size = Vector2( 310, 90 )
mouse_default_cursor_shape = 2
texture_normal = SubResource( 9 )
texture_pressed = SubResource( 3 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/Quit"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "QUIT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="LoadingScreen" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LoadingScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -35.0
margin_right = 125.0
margin_bottom = 35.0
rect_min_size = Vector2( 250, 70 )
custom_fonts/font = SubResource( 11 )
text = "Loading..."
align = 1
valign = 1
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Shop" to="." method="_on_Shop_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/Quit" to="." method="_on_Quit_pressed"]
